[gd_scene load_steps=9 format=3 uid="uid://dvw8eu6r80yb7"]

[ext_resource type="LabelSettings" uid="uid://b3w8fu1mk1mvm" path="res://sprites/pixelfont_label.tres" id="1_4af0q"]
[ext_resource type="Script" path="res://scripts/results_screen.gd" id="1_n7vp0"]
[ext_resource type="Texture2D" uid="uid://bafcofmnhcobt" path="res://sprites/results.png" id="2_3ywoy"]
[ext_resource type="Texture2D" uid="uid://ddngktgy74s58" path="res://sprites/firefly.png" id="3_dmw4d"]

[sub_resource type="Animation" id="Animation_e4bcy"]
length = 0.001

[sub_resource type="Animation" id="Animation_37lk0"]
resource_name = "blink"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContinueContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 180), Vector2(0, 170), Vector2(0, 180)]
}

[sub_resource type="Animation" id="Animation_n80sm"]
resource_name = "firefly"
length = 4.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Firefly:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 4.14106),
"update": 0,
"values": [Vector2(120, 60), Vector2(180, 50), Vector2(250, 50), Vector2(320, 60), Vector2(380, 70)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Firefly:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_45etq"]
_data = {
"RESET": SubResource("Animation_e4bcy"),
"blink": SubResource("Animation_37lk0"),
"firefly": SubResource("Animation_n80sm")
}

[node name="ResultsScreen" type="CanvasLayer"]
script = ExtResource("1_n7vp0")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_3ywoy")

[node name="Firefly" type="Sprite2D" parent="."]
position = Vector2(120, 60)
texture = ExtResource("3_dmw4d")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Firefly"]
lifetime = 0.6
randomness = 0.17
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.09
initial_velocity_max = 30.19

[node name="ResultsTitleContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Label" type="Label" parent="ResultsTitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Results!"
label_settings = ExtResource("1_4af0q")

[node name="ContinueContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 180.0
offset_bottom = 230.0
grow_horizontal = 2

[node name="Label" type="Label" parent="ContinueContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Press A to Continue
Press B to Retry"
label_settings = ExtResource("1_4af0q")

[node name="ResultsContainer" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -82.0
offset_right = -240.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="ResultsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Accuracy:
Cheese"
label_settings = ExtResource("1_4af0q")

[node name="ResultsContainer2" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 268.0
offset_top = -82.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="ResultsContainer2"]
layout_mode = 2
size_flags_vertical = 0
text = "Points:
Like, a lot dude!"
label_settings = ExtResource("1_4af0q")
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_45etq")
}
